# aoc2024

./: .gitignore  README.md
day_1/: CMakeLists.txt
day_1/inputs/: day1_1.txt
day_1/scripts/: bc.sh  compcom.sh
day_1/src/: main.cpp
day_10/: CMakeLists.txt
day_10/src/: main.cpp  p1_utils.cpp  p2_utils.cpp
day_11/: CMakeLists.txt
day_11/src/: main.cpp  p1_utils.cpp  p2_utils.cpp
day_12/: CMakeLists.txt
day_12/src/: main.cpp  p1_utils.cpp  p2_utils.cpp
day_13/: CMakeLists.txt
day_13/src/: machine.h  main.cpp  p1_utils.cpp  p2_utils.cpp
day_14/: CMakeLists.txt
day_14/src/: main.cpp  main.h  p1_utils.cpp  p2_utils.cpp  robot.h
day_15/: CMakeLists.txt  output2
day_15/inputs/: day15_1.txt
day_15/src/: coordinate.h  main.cpp  p1_utils.cpp  p2_utils.cpp
day_16/: CMakeLists.txt
day_16/src/: main.cpp  p1_utils.cpp
day_17/: CMakeLists.txt
day_17/src/: main.cpp  p1_utils.cpp  p2_utils.cpp
day_2/: CMakeLists.txt
day_2/src/: main.cpp
day_3/: CMakeLists.txt
day_3/inputs/: day3_1.txt  day3_2.prod  day3_2.txt
day_3/src/: main.cpp
day_4/: CMakeLists.txt
day_4/src/: main.cpp  p1_utils.cpp  p2_utils.cpp
day_5/: CMakeLists.txt
day_5/src/: main.cpp
day_6/: CMakeLists.txt  working.py
day_6/src/: main.cpp  p1_utils.cpp  p2_utils.cpp
day_7/: CMakeLists.txt  create.sh
day_7/src/: main.cpp  p1_utils.cpp  p2_utils.cpp
day_8/: CMakeLists.txt
day_8/src/: main.cpp  p1_utils.cpp  p2_utils.cpp
day_9/: CMakeLists.txt
day_9/src/: main.cpp  p1_utils.cpp  p2_utils.cpp
